# TB303Synth

./: .gitignore  CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: DelayEffect.cpp  DelayEffect.h  DriveEffect.cpp  DriveEffect.h  TB303Envelope.cpp  TB303Envelope.h  TB303Filter.cpp  TB303Filter.h  TB303Oscillator.cpp  TB303Oscillator.h  TB303Voice.cpp  TB303Voice.h
Source/GUI/: BottomPanel.cpp  BottomPanel.h  KnobComponent.cpp  KnobComponent.h  LEDButton.cpp  LEDButton.h  MiddlePanel.cpp  MiddlePanel.h  PianoKeyboard.cpp  PianoKeyboard.h  StepButton.cpp  StepButton.h  TB303LookAndFeel.cpp  TB303LookAndFeel.h  TopPanel.cpp  TopPanel.h
Source/Presets/: PresetManager.cpp  PresetManager.h
Source/Sequencer/: PatternData.cpp  PatternData.h  StepSequencer.cpp  StepSequencer.h
